deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: team1-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: 'image-registry.openshift-image-registry.svc:5000/team1-app/my-fastapi-image:2024-11-13-14-43-03'
          ports:
            - containerPort: 80
